py.install_sources(
    '__init__.py',
    '__main__.py',
    'cli.py',
    'py.typed',
    subdir: 'drgn',
)

py.install_sources(
    'helpers/__init__.py',
    subdir: 'drgn/helpers',
)

py.install_sources(
    'helpers/common/__init__.py',
    'helpers/common/format.py',
    'helpers/common/memory.py',
    'helpers/common/prog.py',
    'helpers/common/stack.py',
    'helpers/common/type.py',
    subdir: 'drgn/helpers/common',
)

py.install_sources(
    'helpers/experimental/__init__.py',
    'helpers/experimental/kmodify.py',
    subdir: 'drgn/helpers/experimental',
)

py.install_sources(
    'helpers/linux/__init__.py',
    'helpers/linux/bitmap.py',
    'helpers/linux/bitops.py',
    'helpers/linux/block.py',
    'helpers/linux/boot.py',
    'helpers/linux/bpf.py',
    'helpers/linux/cgroup.py',
    'helpers/linux/cpumask.py',
    'helpers/linux/device.py',
    'helpers/linux/fs.py',
    'helpers/linux/idr.py',
    'helpers/linux/kallsyms.py',
    'helpers/linux/kconfig.py',
    'helpers/linux/kernfs.py',
    'helpers/linux/kthread.py',
    'helpers/linux/list.py',
    'helpers/linux/list_nulls.py',
    'helpers/linux/llist.py',
    'helpers/linux/mapletree.py',
    'helpers/linux/mm.py',
    'helpers/linux/module.py',
    'helpers/linux/net.py',
    'helpers/linux/nodemask.py',
    'helpers/linux/percpu.py',
    'helpers/linux/pid.py',
    'helpers/linux/plist.py',
    'helpers/linux/printk.py',
    'helpers/linux/radixtree.py',
    'helpers/linux/rbtree.py',
    'helpers/linux/sched.py',
    'helpers/linux/slab.py',
    'helpers/linux/stackdepot.py',
    'helpers/linux/tc.py',
    'helpers/linux/tcp.py',
    'helpers/linux/timekeeping.py',
    'helpers/linux/user.py',
    'helpers/linux/wait.py',
    'helpers/linux/xarray.py',
    subdir: 'drgn/helpers/linux',
)

py.install_sources(
    'internal/__init__.py',
    'internal/repl.py',
    'internal/rlcompleter.py',
    'internal/sudohelper.py',
    subdir: 'drgn/internal',
)
